--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.7",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.2.0",
+    "bcrypt": "^5.1.1",
     "fastify-helmet": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -43,6 +45,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
