--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.11",
+    "@jest/globals": "^29.6.4",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
@@ -58,7 +60,7 @@
     "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
